# python-on-whales

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  doc-requirements.txt  docker-bake.hcl  index.html  lint-requirements.txt  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: gh-pages.yml  python-package.yml  python-publish.yml
docker_cli_wrapper/: __init__.py  client_config.py  command_line_entrypoint.py  container.py  docker_client.py  docker_command.py  image.py  utils.py  volume.py
docker_cli_wrapper/components/: buildx.py  container.py  download_binaries.py  image.py  volume.py
docker_client/: index.html
docs/: Dockerfile  autogen.py  docs_utils.py  mkdocs.yml  requirements.txt
docs/sources/: docker_client.md
docs/sources/components/: buildx.md  container.md  image.md  network.md  volume.md
docs/template/: docker_client.md  index.md
docs/template/docker_objects/: builders.md  configs.md  container.md  containers.md  containers_demo.py  images.md  images_demo.py  networks.md  nodes.md  plugins.md  services.md  tasks.md  volumes.md  volumes_demo.py
docs/template/objects/: configs.md  containers.md  images.md  plugins.md  pods.md  volumes.md
docs/template/sub-commands/: buildx.md  compose.md  context.md
docs/template/user_guide/: docker_run.md  exceptions.md  generic_resources.md  running_python_on_whales_inside_a_container.md
objects/builders/: index.html
objects/configs/: index.html
objects/containers/: index.html
objects/images/: index.html
objects/networks/: index.html
objects/nodes/: index.html
objects/plugins/: index.html
objects/secrets/: index.html
objects/services/: index.html
objects/stacks/: index.html
objects/tasks/: index.html
objects/volumes/: index.html
python_on_whales/: __init__.py  client_config.py  command_line_entrypoint.py  docker_client.py  download_binaries.py  exceptions.py  py.typed  test_utils.py  utils.py
python_on_whales/components/: app.py  buildx.py  compose.py  config.py  container.py  context.py  image.py  manifest.py  network.py  node.py  plugin.py  secret.py  service.py  stack.py  swarm.py  system.py  task.py  trust.py  volume.py
python_on_whales/components/buildx/: cli_wrapper.py  models.py
python_on_whales/components/compose/: cli_wrapper.py  models.py
python_on_whales/components/config/: cli_wrapper.py  models.py
python_on_whales/components/container/: cli_wrapper.py  docker_object.py  models.py
python_on_whales/components/context/: cli_wrapper.py  models.py
python_on_whales/generic/: __init__.py  generic_client.py
python_on_whales/podman/: __init__.py  podman_client.py
scripts/: add-local-docker-registry.sh  ci-podman-update.sh  ci-setup.sh  download-docker-plugins.sh  install-uv.sh
search/: search_index.json
sub-commands/buildx/: index.html
sub-commands/compose/: index.html
sub-commands/config/: index.html
sub-commands/container/: index.html
sub-commands/context/: index.html
sub-commands/image/: index.html
sub-commands/manifest/: index.html
sub-commands/network/: index.html
sub-commands/node/: index.html
sub-commands/plugin/: index.html
sub-commands/pod/: index.html
sub-commands/secret/: index.html
sub-commands/service/: index.html
sub-commands/stack/: index.html
sub-commands/swarm/: index.html
sub-commands/system/: index.html
sub-commands/task/: index.html
sub-commands/trust/: index.html
sub-commands/volume/: index.html
tests/: Dockerfile  ci-setup.sh  conftest.py  docker_run.py  run_tests.sh  test-requirements.txt
tests/docker_cli_wrapper/: test_docker_run.py  test_image.py  test_volume.py
tests/python_on_whales/: test_client_config.py  test_docker_client.py  test_download_binaries.py  test_exceptions.py  test_logging.py  test_utils.py
user_guide/docker_run/: index.html
user_guide/exceptions/: index.html
user_guide/generic_resources/: index.html
user_guide/running_python_on_whales_inside_a_container/: index.html
(+169 files in other folders)
