[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-on-whales"
version = "0.73.0"
description = "A Docker client for Python, designed to be fun and intuitive!"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8, <4"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]
dev = ["ruff==0.5.6"]

[project.urls]
"Source" = "https://github.com/gabrieldemarmiesse/python-on-whales"
"Documentation" = "https://gabrieldemarmiesse.github.io/python-on-whales/"
"Bug Tracker" = "https://github.com/gabrieldemarmiesse/python-on-whales/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
]
select = [
  "I", # isort
  "F", # Pyflakes
  "E", # pycodestyle
  "W", # pycodestyle

]

[tool.pytest.ini_options]
markers = [
  "docker: marks tests as needing a docker engine to run",
  "podman: marks tests as needing a podman engine to run",
]
xfail_strict = true
pythonpath = ["./"]
